Thu Apr  8 14:32:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* configure.in: --disable-install-doc should prohibit doxygen.

Wed Apr  7 09:44:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (Makefile): qoute init-commands.

Tue Mar 30 18:11:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_initial_load_paths): moved initial load path
	  from ruby.c.

Tue Mar 30 18:04:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (config.status): ommit cached results.

	* configure.in (RUBY_EXEC_PREFIX, RUBY_LIB_PREFIX): fixed.

	* common.mk (revision.h): add RUBY_BRANCH_NAME.

	* configure.in (MINIOBJS): use dmydln.o on all platforms.

	* common.mk (COMMONOBJS): moved dln.o to OBJS not to conflict with
	  dmydln.o.

Tue Mar 30 02:40:31 2010  Akinori MUSHA  <knu@iDaemons.org>

	* prelude.rb (Process.daemon): New method.

	* .document: Add prelude.rb.

Mon Mar 29 17:38:24 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* ext/rational/lib/rational.rb: fix [Bug #1397].

Fri Mar 26 13:09:12 2010  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_eval): Use for() and make it a bit easier to read and
	  debug here.

Fri Mar 26 12:44:08 2010  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (Enumerable#each_entry): New method.

Fri Mar 26 04:52:19 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: fix [ruby-core:28901] [Bug #2997].
	  Thanks, Michael Graff.

	* ext/tk/tcltklib.c: use xfree() for memories allocated by ALLOC().

	* ext/tk/tkutil/tkutil.c: ditto.

	* ext/tk/lib/tkextlib/version.rb: forgot updating.

Fri Mar 26 04:09:24 2010  Akinori MUSHA  <knu@iDaemons.org>

	* prelude.rb, Makefile.in, common.mk: Introduce prelude.rb.

	* eval.c (rb_eval_prelude): New function exported only for use in
	  preludes.

	* configure.in: Define RUBY_EXEC_PREFIX and RUBY_LIB_PREFIX.

	* ruby.c (proc_options, ruby_init_loadpath, ruby_prelude): Load
	  prelude.

	* compile_prelude.rb: Port the prelude compiler from trunk.
